--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			 
 			 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Start Page tests</h3>
+            <h3 class="mb-0">Projects editor tests</h3>
 			          </div>
 
 			<video style="width:600px;max-width:100%;" controls>
