--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
           <div class="resume-content">
             <h3 class="mb-0">Start Page tests</h3>
 
-			<object width="600" height="344" data="https://www.youtube.com/embed/F9Bo89m2f6g"></object>
+			<div class="iframe-container">
+			<iframe width="600" height="350" src="https://www.youtube.com/embed/F9Bo89m2f6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 			</BR>
 			
 
