--- a/index.html
+++ b/index.html
@@ -147,10 +147,7 @@
 		<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Start Page tests</h3>
-
-			<div class="iframe-container">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/F9Bo89m2f6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -159,11 +156,12 @@
 			
 			</br>
 
+
 								
 					<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Login Page tests</h3>
-			         <object width="600" height="344" data="https://www.youtube.com/embed/F9Bo89m2f6g"></object>
+			         <iframe width="560" height="315" src="https://www.youtube.com/embed/lW3u--5-gHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -176,7 +174,7 @@
 					 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Projects Page tests</h3>
-			        <object width="600" height="344" data="https://www.youtube.com/embed/F9Bo89m2f6g"></object>
+			        <iframe width="560" height="315" src="https://www.youtube.com/embed/3H-9WmGqJco" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -188,7 +186,7 @@
 			 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Projects editor tests</h3>
-			        <object width="600" height="344" data="https://www.youtube.com/embed/F9Bo89m2f6g"></object>
+			        <iframe width="560" height="315" src="https://www.youtube.com/embed/WThj4XmBfa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
