--- a/index.html
+++ b/index.html
@@ -77,9 +77,16 @@
         </div>
 		<p class="lead mb-5"><a href=https://github.com/mmatok/Automation-Final-Project target=“_blank”> <b>Click here to view project files in GitHub</b></a> 
 		</br>
+		<iframe width="560" height="315"  align="right" src="https://www.youtube-nocookie.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</BR>
         <p class="lead mb-5">This project was developed on <a href=https://www.involve.me/ target=“_blank”><b>Involve.Me</b></a> platform. 
 		</br> involve.me platform is a user engagement platform that enables you to create personalized 
 		customer interactions on the web such as fully customizable mobile-friendly quizzes, price calculators, surveys, smart forms, personality tests, product configurators & more.</br>
+		
+      
+          			
+			
+
 		<h3>The Goal: </h3>
 		<p class="lead mb-5">Create test cases and secnarios, in order to test Involve.Me platform's features and functionality, and build solid automation using Java that tests various use cases and generate reports that display a very concise 
 		representation of what have been tested.</p>
@@ -147,7 +154,7 @@
 		<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Start Page tests</h3>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -187,6 +194,18 @@
           <div class="resume-content">
             <h3 class="mb-0">Projects editor tests</h3>
 			        <iframe width="560" height="315" src="https://www.youtube.com/embed/WThj4XmBfa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</BR>
+			
+
+			  </div>
+			</div>
+			
+			</br>
+			
+						 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Analytics page tests</h3>
+			        <iframe width="560" height="315" src="https://www.youtube.com/embed/qMq77T3KM-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</BR>
 			
 
