--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 		<p class="lead mb-5"><a href=https://github.com/mmatok/Automation-Final-Project target=“_blank”> <b>Click here to view project files in GitHub</b></a> 
 		</br>
-		<iframe width="560" height="315"  align="right" src="https://www.youtube-nocookie.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/dO3vL_xBhnI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
         <p class="lead mb-5">This project was developed on <a href=https://www.involve.me/ target=“_blank”><b>Involve.Me</b></a> platform. 
 		</br> involve.me platform is a user engagement platform that enables you to create personalized 
@@ -154,8 +154,9 @@
 		<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Start Page tests</h3>
-					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xzI-1ccZzDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/dO3vL_xBhnI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
+			
 			
 
 			  </div>
@@ -168,7 +169,7 @@
 					<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Login Page tests</h3>
-			         <iframe width="560" height="315" src="https://www.youtube.com/embed/lW3u--5-gHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/w2qIq7NNpl0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -181,7 +182,7 @@
 					 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Projects Page tests</h3>
-			        <iframe width="560" height="315" src="https://www.youtube.com/embed/3H-9WmGqJco" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Pjb7ZyrYoXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -193,7 +194,7 @@
 			 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Projects editor tests</h3>
-			        <iframe width="560" height="315" src="https://www.youtube.com/embed/WThj4XmBfa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/zwGzsBdeck8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
 			
 
@@ -205,7 +206,7 @@
 						 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Analytics page tests</h3>
-			        <iframe width="560" height="315" src="https://www.youtube.com/embed/qMq77T3KM-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/1VekHI7aX-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</BR>
 			
 
